[gd_scene load_steps=7 format=3 uid="uid://dws1mi11315d6"]

[ext_resource type="Script" path="res://UI/Components/Card.gd" id="1_iok5u"]
[ext_resource type="Script" path="res://gestion_piece/create_bloc/anim.gd" id="3_q4ffx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n5viv"]
bg_color = Color(0.156863, 0.156863, 0.156863, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.188235, 0.341176, 0.882353, 1)

[sub_resource type="Environment" id="Environment_m8gjj"]
background_mode = 1
background_color = Color(0.290196, 0.427451, 0.898039, 1)
ambient_light_color = Color(1, 1, 1, 1)

[sub_resource type="Gradient" id="Gradient_5xqt0"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.522546)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vkv3x"]
gradient = SubResource("Gradient_5xqt0")
fill_from = Vector2(1, 1)

[node name="Card" type="PanelContainer"]
clip_contents = true
offset_right = 240.0
offset_bottom = 360.0
theme_override_styles/panel = SubResource("StyleBoxFlat_n5viv")
script = ExtResource("1_iok5u")
title = "Ce projet est chouette quand mÃªme"
metadata/_edit_use_anchors_ = true

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
own_world_3d = true
handle_input_locally = false
gui_snap_controls_to_pixels = false
size = Vector2i(236, 356)
render_target_clear_mode = 1
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
environment = SubResource("Environment_m8gjj")

[node name="Model" type="Node3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5)
script = ExtResource("3_q4ffx")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 0, 0)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = SubResource("GradientTexture2D_vkv3x")
expand_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Title"
autowrap_mode = 3

[node name="Button" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "x"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="tree_entered" from="SubViewportContainer/SubViewport" to="." method="_on_sub_viewport_tree_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
